--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: 'Jost', sans-serif;
+    src: url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+  }
+}
+
 body {
   margin: 0px;
   padding: 0px;
+  background-color: #040D12;
+  color: white;
 }
